# ICMD_MoleculsGeneration_project

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: README.md
